fix: restrict JWT jku header to an allowlist of trusted JWKS locations
Co-Authored-By: Hayden Sherriff <sherriff.h@gmail.com>